# chat_bot_ai_assistant

./: .env.example  .gitignore  README.md  bot.py  bot_messages.db-shm  bot_messages.db-wal  bot_messages_test.db  config_loader.py  gemini.md  gemini_client.py  logging_setup.py  main.py  message_storage.py  pyproject.toml  run.py  run.sh  ssl_setup.sh
configs/: db.mariadb.json  db.postgresql.json  db.sqlite3.json
docs/: message_history_stage.md  sqlite_stirage_usage_guide.md
handlers/: command_handler_service.py  error_handler.py  message_handler_service.py
internal/: __init__.py  database.py  db.py  db_instance.py  mariadb.py  postgresql.py  sqlite.py  utils.py
models/: __init__.py  chat_info.py  message.py  user_info.py
repositories/: __init__.py  chat_repository.py  message_repository.py  token_repository.py  user_repository.py
services/: chat_service.py  message_service.py  telegram_auth.py  token_service.py  user_service.py
templates/: dashboard.html  login.html
tests/: test_bot_services.py
